--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TOP10 Google for a specific keyword",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Malinovskypl/webscraper#readme",
   "dependencies": {
-    "axios": "^1.2.6",
+    "axios": "^1.3.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
